--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-Flask
-twython
-twitter_text
-
+Flask==0.8
+Jinja2==2.6
+Werkzeug==0.8.1
+httplib2==0.7.2
+oauth2==1.5.211
+simplejson==2.3.0
+twitter-text-py==1.0.3
+twython==1.4.5
+wsgiref==0.1.2
