--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ Jinja2==2.6
 PyYAML==3.10
 Werkzeug==0.8.2
 distribute==0.6.24
-nltk==2.0.1rc2-git
+epio==0.3.1
+httplib2==0.7.2
+nltk
 requests==0.8.7
 twitter==1.7.2
 twitter-text-py==1.0.3
