--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Werkzeug==0.8.2
 distribute==0.6.24
 epio==0.3.1
 httplib2==0.7.2
-nltk
+nltk==2.0.1rc2-git
 requests==0.8.7
 twitter==1.7.2
 twitter-text-py==1.0.3
